css/main.css
@font-face {
	font-family: FreeSans;
	src: url(/assets/FreeSans.ttf);
}

html,
body {
	width: 100%;
	height: 100%;
	padding: 0px;
	margin: 0px;
	border: none;
	display: flex;
	flex-direction: column;
	background-color: #333;

	font-family: FreeSans, Sans;
	font-size: 20px;
}

* {
	color: #efefef;
}

.hidden {
	display: none !important;
}

::-webkit-scrollbar {
	width: 18px;
}

::-webkit-scrollbar-track {
	background: #383838;
}

::-webkit-scrollbar-thumb {
	background: #444;
}

::-webkit-scrollbar-thumb:hover {
	background: #555;
}

#topBar {
	display: flex;
	width: 100%;
	min-height: 3em;
	height: 3em;
	background-color: #222222;
}

#channelList {
	flex-grow: 1;
	overflow-x: auto;
	overflow-y: hidden;
	display: flex;
	scrollbar-width: none;
}

#channelList>* {
	display: flex;
	padding: 1em;
	align-items: center;
	background-color: #363636;
	margin: 0.25em;
	gap: 0.5em;
}

#channelList>.active {
	background-color: #2d4c21;
}

#channelList>*>.closeButton {
	display: none;
}

#channelList>.active>.closeButton {
	font-size: 0.65em;
	text-align: center;
	display: block;
	background-color: #1c1c1c;
	width: 2em;
	height: 2em;
}


.inputBar {
	display: flex;
	gap: 0.25em;
	width: 100%;
	min-height: 3em;
	height: 3em;
	background-color: #222222;
	padding: 0.25em;
	box-sizing: border-box;
}

#textInput {
	color: #EEE;
	background-color: #333;
	border: none;
	border-radius: 6px;
	flex-grow: 1;
	font-size: 1em;
	resize: none;
	vertical-align: middle;
	font-family: FreeSans, Sans;
	padding: 0.25em;
}

button {
	background-color: #383838;
	border: none;
	border-radius: 8px;
	font-size: 1.25em;
	cursor: pointer;
}

.square {
	aspect-ratio: 1;
}

#tlbox {
	flex-grow: 1;
	overflow-y: auto;
	display: flex;
	flex-direction: column-reverse;
}

#tlbox>#emptyMessage {
	text-align: center;
}

.timeline .upload
{
	display: flex;
	flex-direction: column;
}

.timeline .reply {
	font-size: 0.75em;
	cursor: pointer;
}

.timeline .highlight {
	animation-name: replyHighlight;
	animation-duration: 1s;
	animation-play-state: running;
}

.message {
	display: flex;
	flex-direction: row;
	align-items: center;
}

@keyframes replyHighlight {

	0%,
	50%,
	100% {
		background-color: transparent;
	}

	25%,
	75% {
		background-color: white;
	}
}

.timeline>* .time {
	padding-right: 0.3em;
	opacity: 50%;
}

.timeline>* a.link {
	color: #3a3ae5;
	word-break: break-all;
}

.timeline>* {
	padding: 0.2em;
	padding-left: 0.5em;
	width: calc(100% - 0.7em);

	--bg-color: #333;
	--bg-color-other: #222;
	background-color: var(--bg-color);

	display: flex;
}

.timeline>:nth-child(2n) {
	background-color: color-mix(in srgb, var(--bg-color), #000 10%)
}

.timeline>.mentioned {
	--bg-color: rgb(168 93 6);
}

.timeline>.first {
	--bg-color: rgb(58, 128, 33);
}

.timeline>.sub {
	--bg-color: #9146FF;
}

.timeline>.raid {
	--bg-color: #e87044;
}

.timeline>.redeem {
	--bg-color: #4197cc;
}

.mention {
	font-weight: 600;
}

.badges>img {
	height: 1.5em;
	margin-right: 8px;
	vertical-align: bottom;
	border-radius: 4px;
}

.emote {
	display: inline-grid;
	text-align: center;
	align-items: end;
	vertical-align: bottom;
	justify-items: center;
	font-size: 1.5em;
	min-width: 1em;
	height: 1em;
}

.emote>img {
	height: 1em;
	grid-column: 1;
	grid-row: 1;
}

.emote .emoteTooltip {
	font-size: 1rem;
	user-select: none;
}

.gradient {
	background: -webkit-linear-gradient(#eee, #333);
	-webkit-background-clip: text;
	-webkit-text-fill-color: transparent;
}

#emoteSuggestions {
	position: absolute;
	top: 0px;
}

.popupMenu {
	background: #222;
	display: flex;
	flex-direction: column;
	position: absolute;
}

#currentAccountAvatar {
	max-width: 1.25em;
	height: 1.25em;
}

.tooltip {
	background-color: rgba(0, 0, 0, 0.75);
	border-radius: 0.25em;
	padding: 0.5em;
	position: absolute;
}

.emoteTooltip {
	display: flex;
	flex-direction: column;
	align-items: center;
	text-align: center;
	max-width: 20em;
}

.emoteTooltip>img {
	height: 3em;
}

.message.deleted {
	opacity: 0.25;
}

.message.deletion {
	opacity: 0.5;
	cursor: pointer;
}

#dropZone {
	box-sizing: border-box;
	display: none;
	position: fixed;
	width: 100%;
	height: 100%;
	left: 0;
	top: 0;
	z-index: 99999;
	background: #000000c0;

	flex-direction: column;
	justify-content: center;
	align-items: center;
	gap: 0.75em;
}

#dropZone::before {
	font-size: 3em;
}

input {
	color: black;
}

input:placeholder-shown {
	text-overflow: ellipsis;
}

#emojiList {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: flex-start;
	flex-grow: 1;
	overflow-y: scroll;
	background: #222;
}

#emotePages {
	flex-grow: 1;
}

#emojiList .emote {
	margin: 0.25em;
	cursor: pointer;
}

#emoteTabs>* {
	padding: 0.25em;
	align-items: center;
	background-color: #363636;
	margin: 0.2em;
	gap: 0.1em;
}

#emoteTabs>.active {
	background-color: #2d4c21;
}

#replyingToBar
{
	padding: 0.35em;
	background: #222222;
	display: flex;
	flex-direction: column;
}

#replyingToBar > *
{
	display: flex;
	flex-direction: row;
}

#replyContent
{
	flex-grow: 1;
}

.messageMenu
{
	display: flex;
	flex-direction: column;
	width: 15em;
}

